--- a/Recipe_Sharing_Website/Components/_Imports.razor
+++ b/Recipe_Sharing_Website/Components/_Imports.razor
@@ -1,9 +1,23 @@
-﻿@using Microsoft.AspNetCore.Components
+﻿@* Blazor core component base namespaces *@
+@using Microsoft.AspNetCore.Components
+
+@* Forms / EditForm / InputText / InputSelect *@
 @using Microsoft.AspNetCore.Components.Forms
+
+@* Routing + navigation support *@
 @using Microsoft.AspNetCore.Components.Routing
+
+@* Event handlers & UI events *@
 @using Microsoft.AspNetCore.Components.Web
+
+@* EF Core for database access in pages/components *@
 @using Microsoft.EntityFrameworkCore
 
+@* Root namespace for shared app types *@
 @using Recipe_Sharing_Website
+
+@* Access to DbContext + AuthSession + helpers *@
 @using Recipe_Sharing_Website.Data
+
+@* Access to application model classes *@
 @using Recipe_Sharing_Website.Models
